--- a/Loon/Loon.conf
+++ b/Loon/Loon.conf
@@ -1,5 +1,5 @@
 # 适用于 Loon 2.1.0 + 版本的配置文件
-# 2022年01月31日 23:20 UTC/GMT +8
+# 2022年02月26日 23:10 UTC/GMT +8
 
 [General]
 # IPv6 支持
@@ -104,61 +104,61 @@ FINAL,其他
 # 订阅规则、策略
 # 直连和广告拦截
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Special.list, policy=DIRECT, tag=Special, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Reject.list, policy=广告拦截, tag=Reject, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Reject.list, policy=广告拦截, tag=Reject, enabled=true
 # 国内媒体分组，如需为某个规则列表单独设置策略，请直接修改 policy= 后的策略名称
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/Netease%20Music.list, policy=国内媒体, tag=Netease Music, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/Bilibili.list, policy=国内媒体, tag=Bilibili, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/IQ.list, policy=国内媒体, tag=IQ, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/IQIYI.list, policy=国内媒体, tag=iQiYi, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/Letv.list, policy=国内媒体, tag=Letv, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/MOO.list, policy=国内媒体, tag=MOO, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/Tencent%20Video.list, policy=国内媒体, tag=Tencent Video, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/Youku.list, policy=国内媒体, tag=Youku, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/WeTV.list, policy=国内媒体, tag=WeTV, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Netease%20Music.list, policy=国内媒体, tag=Netease Music, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Bilibili.list, policy=国内媒体, tag=Bilibili, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/IQ.list, policy=国内媒体, tag=IQ, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/IQIYI.list, policy=国内媒体, tag=iQiYi, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Letv.list, policy=国内媒体, tag=Letv, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/MOO.list, policy=国内媒体, tag=MOO, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Tencent%20Video.list, policy=国内媒体, tag=Tencent Video, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Youku.list, policy=国内媒体, tag=Youku, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/WeTV.list, policy=国内媒体, tag=WeTV, enabled=true
 # 国际媒体分组，如需为某个规则列表单独设置策略，请直接修改最后的策略名称
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/Netflix.list, policy=国际媒体, tag=Netflix, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/Disney%20Plus.list, policy=国际媒体, tag=Disney Plus, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/Spotify.list, policy=国际媒体, tag=Spotify, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/YouTube.list, policy=国际媒体, tag=YouTube, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/YouTube%20Music.list, policy=国际媒体, tag=YouTube Music, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/ABC.list, policy=国际媒体, tag=ABC, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/Abema%20TV.list, policy=国际媒体, tag=Abema TV, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/Amazon.list, policy=国际媒体, tag=Amazon, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/Apple%20News.list, policy=国际媒体, tag=Apple News, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/Apple%20TV.list, policy=国际媒体, tag=Apple TV, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/Bahamut.list, policy=国际媒体, tag=Bahamut, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/BBC%20iPlayer.list, policy=国际媒体, tag=BBC iPlayer, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/DAZN.list, policy=国际媒体, tag=DAZN, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/Discovery%20Plus.list, policy=国际媒体, tag=Discovery Plus, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/encoreTVB.list, policy=国际媒体, tag=encoreTVB, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/Fox%20Now.list, policy=国际媒体, tag=Fox Now, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/Fox%2B.list, policy=国际媒体, tag=Fox+, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/HBO%20Go.list, policy=国际媒体, tag=HBO Go, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/HBO%20Max.list, policy=国际媒体, tag=HBO Max, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/Hulu%20Japan.list, policy=国际媒体, tag=Hulu Japan, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/Hulu.list, policy=国际媒体, tag=Hulu, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/Japonx.list, policy=国际媒体, tag=Japonx, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/JOOX.list, policy=国际媒体, tag=JOOX, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/KKBOX.list, policy=国际媒体, tag=KKBOX, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/KKTV.list, policy=国际媒体, tag=KKTV, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/Line%20TV.list, policy=国际媒体, tag=Line TV, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/myTV%20SUPER.list, policy=国际媒体, tag=myTV SUPER, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/Pandora.list, policy=国际媒体, tag=Pandora, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/PBS.list, policy=国际媒体, tag=PBS, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/Pornhub.list, policy=国际媒体, tag=Pornhub, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/Soundcloud.list, policy=国际媒体, tag=Soundcloud, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/ViuTV.list, policy=国际媒体, tag=ViuTV, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Netflix.list, policy=国际媒体, tag=Netflix, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Disney%20Plus.list, policy=国际媒体, tag=Disney Plus, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Spotify.list, policy=国际媒体, tag=Spotify, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/YouTube.list, policy=国际媒体, tag=YouTube, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/YouTube%20Music.list, policy=国际媒体, tag=YouTube Music, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/ABC.list, policy=国际媒体, tag=ABC, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Abema%20TV.list, policy=国际媒体, tag=Abema TV, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Amazon.list, policy=国际媒体, tag=Amazon, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Apple%20News.list, policy=国际媒体, tag=Apple News, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Apple%20TV.list, policy=国际媒体, tag=Apple TV, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Bahamut.list, policy=国际媒体, tag=Bahamut, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/BBC%20iPlayer.list, policy=国际媒体, tag=BBC iPlayer, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/DAZN.list, policy=国际媒体, tag=DAZN, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Discovery%20Plus.list, policy=国际媒体, tag=Discovery Plus, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/encoreTVB.list, policy=国际媒体, tag=encoreTVB, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Fox%20Now.list, policy=国际媒体, tag=Fox Now, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Fox%2B.list, policy=国际媒体, tag=Fox+, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/HBO%20Go.list, policy=国际媒体, tag=HBO Go, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/HBO%20Max.list, policy=国际媒体, tag=HBO Max, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Hulu%20Japan.list, policy=国际媒体, tag=Hulu Japan, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Hulu.list, policy=国际媒体, tag=Hulu, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Japonx.list, policy=国际媒体, tag=Japonx, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/JOOX.list, policy=国际媒体, tag=JOOX, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/KKBOX.list, policy=国际媒体, tag=KKBOX, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/KKTV.list, policy=国际媒体, tag=KKTV, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Line%20TV.list, policy=国际媒体, tag=Line TV, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/myTV%20SUPER.list, policy=国际媒体, tag=myTV SUPER, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Pandora.list, policy=国际媒体, tag=Pandora, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/PBS.list, policy=国际媒体, tag=PBS, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Pornhub.list, policy=国际媒体, tag=Pornhub, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Soundcloud.list, policy=国际媒体, tag=Soundcloud, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/ViuTV.list, policy=国际媒体, tag=ViuTV, enabled=true
 # 苹果服务规则列表
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Apple.list, policy=苹果服务, tag=Apple, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Apple.list, policy=苹果服务, tag=Apple, enabled=true
 # 电报、微软及 TikTok / PayPal 可选规则列表
-#https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Telegram.list, policy=电报服务, tag=Telegram, enabled=true
-#https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Microsoft.list, policy=微软服务, tag=Microsoft, enabled=true
-#https://raw.githubusercontent.com/Semporia/Loon/master/Rule/TikTok.list, policy=国际抖音, tag=TikTok, enabled=true
-#https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/PayPal.list, policy=贝宝服务, tag=PayPal, enabled=true
+#https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Telegram.list, policy=电报服务, tag=Telegram, enabled=true
+#https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Microsoft.list, policy=微软服务, tag=Microsoft, enabled=true
+#https://raw.githubusercontent.com/Semporia/Loon/main/Rule/TikTok.list, policy=国际抖音, tag=TikTok, enabled=true
+#https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/PayPal.list, policy=贝宝服务, tag=PayPal, enabled=true
 # 必须规则列表
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Speedtest.list, policy=网速测试, tag=Speedtest, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Proxy.list, policy=代理, tag=Proxy, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Domestic.list, policy=大陆网络, tag=Domestic, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Speedtest.list, policy=网速测试, tag=Speedtest, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Proxy.list, policy=代理, tag=Proxy, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Domestic.list, policy=大陆网络, tag=Domestic, enabled=true
 
 [Rewrite]
 # 本地重写
@@ -173,22 +173,14 @@ https://raw.githubusercontent.com/GeQ1an/Rules/master/Loon/Rewrite/Rewrite.list,
 # 1. 指定域名使用对应的IP地址
 # 2. 将域名指向另一个域名
 # 3. 指定域名请求 DNS 时使用特定的 DNS 服务器，格式如下：
-# > google.com = server:8.8.8.8
-# > *.baidu.com = server:https://example.com/dns-query
-# > *.testflight.apple.com = server:8.8.4.4
+## google.com = server:8.8.8.8
+## *.baidu.com = server:https://example.com/dns-query
+## *.testflight.apple.com = server:8.8.4.4
 # 4. 指定具体的 SSID 环境下使用特定的 DNS 服务器，格式如下：
-# > ssid:Stick = server:system
+## ssid:Stick = server:system
 
 [Script]
 enable = true
-# Bilibili - www.bilibili.com, api.bilibili.com, app.bilibili.com, api.live.bilibili.com
-http-response https://app.bilibili.com/x/v2/space\?access_key requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20bilibili%20space.js
-http-response https://app.bilibili.com/x/resource/show/tab\?access_key requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20bilibili%20tab.js
-http-response https://app.bilibili.com/x/v2/feed/index\?access_key requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20bilibili%20feed.js
-http-response https://app.bilibili.com/x/v2/account/mine\?access_key requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20bilibili%20account.js
-http-response https://app.bilibili.com/x/v2/view\?access_key requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20bilibili%20view%20relate.js
-http-response https://api.bilibili.com/x/v2/reply/main\?access_key requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20bilibili%20reply.js
-http-response https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoom\?access_key requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20bilibili%20live.js
 
 # Display commodity historical price
 # > JD - api.m.jd.com
@@ -206,12 +198,6 @@ http-response ^https?://ios\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22vid
 http-response ^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) requires-body=1,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
 http-response ^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/(photos/pic_recommend_status|live/media_homelist)|video/tiny_stream_video_list|photo/info) requires-body=1,max-size=-1,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/wb_ad.js
 
-# Zhihu - api.zhihu.com, www.zhihu.com
-http-response https://api.zhihu.com/moments/recommend requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20zhihu%20feed.js
-http-response https://api.zhihu.com/topstory/recommend requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20zhihu%20recommend.js
-http-response https://api.zhihu.com/v4/questions requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20zhihu%20answer.js
-http-response https://api.zhihu.com/people/ requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20zhihu%20people.js
-
 [Remote Script]
 # 订阅脚本
 # 订阅url,别名(可选)
@@ -221,11 +207,13 @@ http-response https://api.zhihu.com/people/ requires-body=1,max-size=0,script-pa
 # 详细使用说明至 https://github.com/Semporia/TikTok-Unlock/blob/master/README.md 查看
 # 如想更换 TikTok 区域，直接修改下方链接中 TikTokKR 为 TikTokJP / TikTokTW / TikTokUS 即可
 #https://raw.githubusercontent.com/Semporia/TikTok-Unlock/master/Loon/TikTokKR.plugin, policy=国际抖音, tag=TikTok Unlock
+https://raw.githubusercontent.com/app2smile/rules/master/plugin/bilibili.plugin, tag=Bilibili Adblock, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhihu/zhihu_lite.lnplugin, tag=Zhihu Adblock, enabled=true
 
 [MITM]
 # 请在正式使用前将其他已信任证书的 P12 及密码填入下方，并删掉 ca-p12 和 ca-passphrase 前的井号
 # 或者前往设置界面生成、安装并信任新证书
-hostname = www.bilibili.com, api.bilibili.com, app.bilibili.com, api.live.bilibili.com, api.m.jd.com, trade-acs.m.taobao.com, ios.prod.ftl.netflix.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, api.zhihu.com, www.zhihu.com
+hostname = www.bilibili.com, api.bilibili.com, app.bilibili.com, api.live.bilibili.com, api.m.jd.com, trade-acs.m.taobao.com, ios.prod.ftl.netflix.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com
 enable = true
 skip-server-cert-verify = true
 #ca-p12 =
