--- a/QuantumultX/Sample/DlerCloud/Head.conf
+++ b/QuantumultX/Sample/DlerCloud/Head.conf
@@ -4,7 +4,7 @@ excluded_routes = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0
 network_check_url = http://www.gstatic.com/generate_204
 server_check_url = http://www.gstatic.cn/generate_204
 
-geo_location_checker = http://ip-api.com/json/?lang=zh-CN, https://github.com/KOP-XIAO/QuantumultX/raw/master/Scripts/IP_API.js
+geo_location_checker = http://ip-api.com/json/?lang=zh-CN, https://cdn.jsdelivr.net/gh/KOP-XIAO/QuantumultX@master/Scripts/IP_API.js
 
 [dns]
 server = 119.29.29.29
