--- a/QuantumultX/Sample/Sample_DlerCloud.conf
+++ b/QuantumultX/Sample/Sample_DlerCloud.conf
@@ -1,6 +1,6 @@
 # 该文件基于 Quantumult X 1.0.27 正式版制作，只适用于 Dler Cloud 服务
 #
-# 2022年02月21日 02:00 UTC/GMT +8
+# 2022年02月26日 23:00 UTC/GMT +8
 
 [general]
 # 网络测试链接
@@ -18,7 +18,7 @@ running_mode_trigger=filter, filter, Stick:all_direct, Stick-5G:all_proxy
 resource_parser_url=https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
 
 [dns]
-# 如果只在中国大陆境内使用，可以删除 1.0.0.1 和 8.8.8.8 两行 DNS（推荐）
+# 如果只在中国大陆境内使用，推荐删除 1.0.0.1 和 8.8.8.8 两个 DNS
 server=1.0.0.1
 server=8.8.8.8
 server=114.114.114.114
@@ -26,14 +26,13 @@ server=119.29.29.29
 server=223.5.5.5
 
 [policy]
-# 请自行在策略组添加需要加入的节点，亦可直接通过选择自带 PROXY 策略节点使用
 # 其中 CMedia 策略组为中国媒体，GMedia 为国际媒体，Outside 为境外链接，Mainland 为大陆链接，Others 为最终规则
 # 已更换彩色图标以适配 Quantumult X 新特性
 ## 需要手动长按「策略组名称」——点击「背景」——点击右「上角+号」——屏幕中间位置「不透明度调整为 0%」，右上角X关闭此界面，再选择新添加的背景 (在下方) 即可使用透明背景
 static=AdBlock, reject, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Reject.png
 static=Outside, direct, Hong Kong, Taiwan, Japan, Korea, United States, Singapore, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
 static=Mainland, direct, Outside, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Domestic.png
-static=Apple, direct, Outside, Hong Kong, United States, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
+static=Apple, direct, Outside, Hong Kong, United States, Japan, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
 static=CMedia, Mainland, Outside, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/DomesticMedia.png
 static=GMedia, Outside, Japan, Korea, Taiwan, Singapore, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/ForeignMedia.png
 static=Netflix, GMedia, Singapore, Hong Kong, Taiwan, United States, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netflix.png
@@ -41,22 +40,29 @@ static=Disney+, GMedia, Singapore, Hong Kong, Taiwan, United States, img-url=htt
 static=Spotify, GMedia, Singapore, Hong Kong, Taiwan, United States, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Spotify.png
 static=Telegram, Outside, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram_X.png
 static=PayPal, Outside, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/PayPal.png
-static=Speedtest, direct, Hong Kong, Taiwan, Singapore, Japan, Korea, United States, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Speedtest.png
+static=Speedtest, direct, Hong Kong, Taiwan, Singapore, Japan, Korea, United States, Other, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Speedtest.png
 static=Others, Outside, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Final.png
 
-available=Hong Kong, resource-tag-regex=Dler, server-tag-regex=香港|Hong Kong|HK, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Hong_Kong.png
-available=Singapore, resource-tag-regex=Dler, server-tag-regex=新加坡|Singapore|SG, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png
-available=Taiwan, resource-tag-regex=Dler, server-tag-regex=台湾|Taiwan|TW|台北, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Taiwan.png
-available=United States, resource-tag-regex=Dler, server-tag-regex=美国|United States|US, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/United_States.png
-available=Japan, resource-tag-regex=Dler, server-tag-regex=日本|Japan|JP, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Japan.png
-available=Korea, resource-tag-regex=Dler, server-tag-regex=韩国|Korea|KR, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Korea.png
+available = Hong Kong, resource-tag-regex=Dler Cloud - HK, img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Hong_Kong.png
+available = Singapore, resource-tag-regex=Dler Cloud - SG, img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png
+available = Taiwan, resource-tag-regex=Dler Cloud - TW,  img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Taiwan.png
+available = United States, resource-tag-regex=Dler Cloud - US, img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/United_States.png
+available = Japan, resource-tag-regex=Dler Cloud - JP, img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Japan.png
+available = Korea, resource-tag-regex=Dler Cloud - KR, img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Korea.png
+static = Other, resource-tag-regex=Dler Cloud - OT, img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Available.png
 
 [server_remote]
 # 请将下面订阅链接的 XXXXXX 替换为自己的托管 token
 # 进阶用户可以到
 # https://docs.lhie1.com/black-hole/shi-yong-jiao-cheng/ding-yue-di-zhi-tuo-guan-di-zhi/untitled
 # 查看更多可选参数，以便获取到更符合自己要求的节点链接
-https://dler.cloud/subscribe/XXXXXX?protocols=ss&list=quantumultx, tag=Dler Cloud, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Dler.png, update-interval=43200, enabled=true
+https://dler.cloud/subscribe/XXXXXX?protocols=smart&list=quantumultx&area=hk, tag=Dler Cloud-HK, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Hong_Kong.png, update-interval=43200, enabled=true
+https://dler.cloud/subscribe/XXXXXX?protocols=smart&list=quantumultx&area=tw, tag=Dler Cloud-TW, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Taiwan.png, update-interval=43200, enabled=true
+https://dler.cloud/subscribe/XXXXXX?protocols=smart&list=quantumultx&area=sg, tag=Dler Cloud-SG, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Singapore.png, update-interval=43200, enabled=true
+https://dler.cloud/subscribe/XXXXXX?protocols=smart&list=quantumultx&area=jp, tag=Dler Cloud-JP, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Japan.png, update-interval=43200, enabled=true
+https://dler.cloud/subscribe/XXXXXX?protocols=smart&list=quantumultx&area=kr, tag=Dler Cloud-KR, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Korea.png, update-interval=43200, enabled=true
+https://dler.cloud/subscribe/XXXXXX?protocols=smart&list=quantumultx&area=us, tag=Dler Cloud-US, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/United_States.png, update-interval=43200, enabled=true
+https://dler.cloud/subscribe/XXXXXX?protocols=smart&list=quantumultx&noarea=hk+tw+sg+jp+kr+us, tag=Dler Cloud-OT, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/Other.png, update-interval=43200, enabled=true
 
 [filter_remote]
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Special.list, tag=Special (Stick Rules), enabled=true
