--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -1,6 +1,6 @@
 # 该文件基于 Quantumult X 1.0.27 正式版制作。
 #
-# 2022年01月31日 22:00 UTC/GMT +8
+# 2022年02月26日 23:10 UTC/GMT +8
 #
 # Quantumult 使用 HTTP HEAD 方法对测试网址 server_check_url 进行网页响应性测试（测试结果为通过该节点访问此网页获得 HTTP 响应所需要的时间），来确认节点的可用性。
 # Quantumult 界面中的延迟测试方式均为网页响应性测试，显示的最终延迟均为通过对应节点访问测试网页获得 HTTP 响应所需要时间。
@@ -22,7 +22,7 @@ running_mode_trigger=filter, filter, Stick:all_direct, Stick-5G:all_proxy, Stick
 resource_parser_url=https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
 
 [dns]
-# 如果只在中国大陆境内使用，可以删除 1.0.0.1 和 8.8.8.8 两行 DNS（推荐）
+# 如果只在中国大陆境内使用，推荐删除 1.0.0.1 和 8.8.8.8 两个 DNS
 # 可以视情况取消 no-system 和 no-ipv6 前的注释
 ;no-system
 ;no-ipv6
@@ -54,13 +54,13 @@ static=GMedia, Outside, Hong Kong, Taiwan, Japan, Korea, United States, Singapor
 ;static=PayPal, Outside, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/PayPal.png
 static=Speedtest, direct, Hong Kong, Taiwan, Singapore, Japan, Korea, United States, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Speedtest.png
 static=Others, Outside, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Final.png
-
-available=Hong Kong, resource-tag-regex=我的订阅, server-tag-regex=香港|Hong Kong|HK, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Hong_Kong.png
-available=Singapore, resource-tag-regex=我的订阅, server-tag-regex=新加坡|Singapore|SG, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png
-available=Taiwan, resource-tag-regex=我的订阅, server-tag-regex=台湾|Taiwan|TW|台北, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Taiwan.png
-available=United States, resource-tag-regex=我的订阅, server-tag-regex=美国|United States|US, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/United_States.png
-available=Japan, resource-tag-regex=我的订阅, server-tag-regex=日本|Japan|JP, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Japan.png
-available=Korea, resource-tag-regex=我的订阅, server-tag-regex=韩国|Korea|KR, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Korea.png
+# 请修改下方“我的订阅”为订阅标签的名称，若机场不包含下方所有国家/地区节点，请删除不包含的部分，并删除上方对应国家/地区策略名
+available=Hong Kong, resource-tag-regex=我的订阅, server-tag-regex=香港|Hong Kong|HK|hk, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Hong_Kong.png
+available=Singapore, resource-tag-regex=我的订阅, server-tag-regex=新加坡|Singapore|SG|sg, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png
+available=Taiwan, resource-tag-regex=我的订阅, server-tag-regex=台湾|Taiwan|TW|tw|台北, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Taiwan.png
+available=United States, resource-tag-regex=我的订阅, server-tag-regex=美国|United States|US|us, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/United_States.png
+available=Japan, resource-tag-regex=我的订阅, server-tag-regex=日本|Japan|JP|jp, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Japan.png
+available=Korea, resource-tag-regex=我的订阅, server-tag-regex=韩国|Korea|KR|kr, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Korea.png
 
 [server_remote]
 # 删掉“订阅连接”四字，粘贴 SS/SSR/V2Ray 订阅或 Quantumult X 专用订阅，“我的订阅”表示自定义订阅标签，可随意更改，但同时应该修改上方策略组处相关文字 (区分大小写)
