--- a/Loon/Loon_cdn.conf
+++ b/Loon/Loon_cdn.conf
@@ -1,5 +1,5 @@
 # 适用于 Loon 2.1.0 + 版本的配置文件
-# 2022年02月26日 23:10 UTC/GMT +8
+# 2022年02月27日 00:00 UTC/GMT +8
 
 [General]
 # IPv6 支持
@@ -153,7 +153,7 @@ https://cdn.jsdelivr.net/gh/dler-io/Rules@main/Surge/Surge%203/Provider/Apple.li
 # 电报、微软及 TikTok / PayPal 可选规则列表
 #https://cdn.jsdelivr.net/gh/dler-io/Rules@main/Surge/Surge%203/Provider/Telegram.list, policy=电报服务, tag=Telegram, enabled=true
 #https://cdn.jsdelivr.net/gh/dler-io/Rules@main/Surge/Surge%203/Provider/Microsoft.list, policy=微软服务, tag=Microsoft, enabled=true
-#https://cdn.jsdelivr.net/gh/Semporia/Loon@main/Rule/TikTok.list, policy=国际抖音, tag=TikTok, enabled=true
+#https://cdn.jsdelivr.net/gh/Semporia/Loon@master/Rule/TikTok.list, policy=国际抖音, tag=TikTok, enabled=true
 #https://cdn.jsdelivr.net/gh/dler-io/Rules@main/Surge/Surge%203/Provider/PayPal.list, policy=贝宝服务, tag=PayPal, enabled=true
 # 必须规则列表
 https://cdn.jsdelivr.net/gh/dler-io/Rules@main/Surge/Surge%203/Provider/Speedtest.list, policy=网速测试, tag=Speedtest, enabled=true
