--- a/Loon/Loon_old_cdn.conf
+++ b/Loon/Loon_old_cdn.conf
@@ -1,4 +1,4 @@
-# 适用于 Loon 2.1.19 + 版本的配置文件
+# 适用于 Loon 2.1.0 + 版本的配置文件
 # 2022年05月12日 03:00 UTC/GMT +8
 
 [General]
@@ -161,8 +161,12 @@ https://cdn.jsdelivr.net/gh/dler-io/Rules@main/Surge/Surge%203/Provider/Proxy.li
 https://cdn.jsdelivr.net/gh/dler-io/Rules@main/Surge/Surge%203/Provider/Domestic.list, policy=大陆网络, tag=Domestic, enabled=true
 
 [Rewrite]
-# 重写规则
+# 本地重写
 enable = true
+
+[Remote Rewrite]
+# 订阅重写，格式：订阅 URL，tag=别名(可选)
+https://cdn.jsdelivr.net/gh/GeQ1an/Rules@master/Loon/Rewrite/Rewrite.list, tag=Rewrite, enabled=true
 
 [Host]
 # 可以指定以下四种模式：
@@ -194,6 +198,10 @@ http-response ^https?://ios\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22vid
 http-response ^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) requires-body=1,script-path=https://cdn.jsdelivr.net/gh/yichahucha/surge@master/wb_launch.js
 http-response ^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/(photos/pic_recommend_status|live/media_homelist)|video/tiny_stream_video_list|photo/info) requires-body=1,max-size=-1,script-path=https://cdn.jsdelivr.net/gh/yichahucha/surge@master/wb_ad.js
 
+[Remote Script]
+# 订阅脚本
+# 订阅url,别名(可选)
+
 [Plugin]
 # 默认未启用 TikTok 解锁插件，如需启用请一并启用 TikTok 规则及策略组
 # 详细使用说明至 https://github.com/Semporia/TikTok-Unlock/blob/master/README.md 查看
@@ -201,7 +209,6 @@ http-response ^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positiv
 #https://cdn.jsdelivr.net/gh/Semporia/TikTok-Unlock@master/Loon/TikTokKR.plugin, policy=国际抖音, tag=TikTok Unlock
 https://cdn.jsdelivr.net/gh/app2smile/rules@master/plugin/bilibili.plugin, tag=Bilibili Adblock, enabled=true
 https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/script/zhihu/zhihu_lite.lnplugin, tag=Zhihu Adblock, enabled=true
-https://cdn.jsdelivr.net/gh/GeQ1an/Rules@master/Loon/Rewrite/Rewrite.plugin, tag=Stick Rules for Rewrite, enabled=true
 
 [MITM]
 # 请在正式使用前将其他已信任证书的 P12 及密码填入下方，并删掉 ca-p12 和 ca-passphrase 前的井号
