Fix Loon config

--- a/Loon/Loon_old.conf
+++ b/Loon/Loon_old.conf
@@ -1,5 +1,5 @@
-# 适用于 Loon 2.1.0 + 版本的配置文件
-# 2022年05月12日 03:00 UTC/GMT +8
+# 适用于 Loon 2.1.0 - 2.1.18 版本的配置文件
+# 2022年05月15日 18:00 UTC/GMT +8
 
 [General]
 # IPv6 支持
@@ -55,7 +55,7 @@ Dler Cloud - US = NameRegex,Dler Cloud,FilterKey = .*(美国|United States|US|us
 #网飞视频 = select,国际媒体,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netflix.png
 #迪士尼+ = select,国际媒体,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Disney.png
 #声田音乐 = select,国际媒体,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Spotify.png
-#油管视频 = select, policy=国际媒体, tag=Netflix, enabled=true,代理,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
+#油管视频 = select,国际媒体,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
 #电报服务 = select,代理,新加坡节点,美国节点,香港节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram_X.png
 #微软服务 = select,直连,代理,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Microsoft.png
 #国际抖音 = select,代理,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TikTok.png
