--- a/Loon/Loon.conf
+++ b/Loon/Loon.conf
@@ -1,5 +1,5 @@
 # 适用于 Loon 2.1.19 + 版本的配置文件
-# 2022年05月15日 18:00 UTC/GMT +8
+# 2022年06月08日 00:30 UTC/GMT +8
 
 [General]
 # IPv6 支持
@@ -131,6 +131,7 @@ https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Me
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/DAZN.list, policy=国际媒体, tag=DAZN, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Discovery%20Plus.list, policy=国际媒体, tag=Discovery Plus, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/encoreTVB.list, policy=国际媒体, tag=encoreTVB, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/F1%20TV.list, policy=国际媒体, tag=F1 TV, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Fox%20Now.list, policy=国际媒体, tag=Fox Now, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Fox%2B.list, policy=国际媒体, tag=Fox+, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/HBO%20Go.list, policy=国际媒体, tag=HBO Go, enabled=true
