--- a/QuantumultX/Sample/Sample_DlerCloud.conf
+++ b/QuantumultX/Sample/Sample_DlerCloud.conf
@@ -1,12 +1,14 @@
-# 该文件基于 Quantumult X 1.0.27 正式版制作，只适用于 Dler Cloud 服务
+# 该文件基于 Quantumult X 1.0.29 正式版制作，只适用于 Dler Cloud 服务
 #
-# 2022年02月26日 23:00 UTC/GMT +8
+# 2022年06月08日 00:30 UTC/GMT +8
 
 [general]
 # 网络测试链接
 network_check_url=http://bing.com
 # 服务器测试链接
 server_check_url=http://www.gstatic.com/generate_204
+# 服务器测试超时时间 (毫秒)
+server_check_timeout=3000
 # 如需识别节点为中文和显示国旗，请取消下面 geo_location_checker 前的 ; 备注
 ;geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/IP_API.js
 # 指定 WiFi 直连
@@ -27,14 +29,12 @@ server=223.5.5.5
 
 [policy]
 # 其中 CMedia 策略组为中国媒体，GMedia 为国际媒体，Outside 为境外链接，Mainland 为大陆链接，Others 为最终规则
-# 已更换彩色图标以适配 Quantumult X 新特性
-## 需要手动长按「策略组名称」——点击「背景」——点击右「上角+号」——屏幕中间位置「不透明度调整为 0%」，右上角X关闭此界面，再选择新添加的背景 (在下方) 即可使用透明背景
-static=AdBlock, reject, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Reject.png
+static=AdBlock, reject, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Advertising.png
 static=Outside, direct, Hong Kong, Taiwan, Japan, Korea, United States, Singapore, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
 static=Mainland, direct, Outside, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Domestic.png
 static=Apple, direct, Outside, Hong Kong, United States, Japan, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
-static=CMedia, Mainland, Outside, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/DomesticMedia.png
-static=GMedia, Outside, Japan, Korea, Taiwan, Singapore, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/ForeignMedia.png
+static=CMedia, Mainland, Outside, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/StreamingCN.png
+static=GMedia, Outside, Japan, Korea, Taiwan, Singapore, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Streaming.png
 static=Netflix, GMedia, Singapore, Hong Kong, Taiwan, United States, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netflix.png
 static=Disney+, GMedia, Singapore, Hong Kong, Taiwan, United States, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Disney.png
 static=Spotify, GMedia, Singapore, Hong Kong, Taiwan, United States, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Spotify.png
