--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -1,20 +1,22 @@
-# 该文件基于 Quantumult X 1.0.27 正式版制作。
+# 该文件基于 Quantumult X 1.0.29 正式版制作
 #
-# 2022年02月26日 23:10 UTC/GMT +8
+# 2022年06月08日 00:30 UTC/GMT +8
 #
-# Quantumult 使用 HTTP HEAD 方法对测试网址 server_check_url 进行网页响应性测试（测试结果为通过该节点访问此网页获得 HTTP 响应所需要的时间），来确认节点的可用性。
-# Quantumult 界面中的延迟测试方式均为网页响应性测试，显示的最终延迟均为通过对应节点访问测试网页获得 HTTP 响应所需要时间。
-# 由于 Trojan 协议为无响应校验协议，使得 HTTP 检测方式即使获得了 HTTP 响应，也不代表节点一定可用。
+# Quantumult 使用 HTTP HEAD 方法对测试网址 server_check_url 进行网页响应性测试（测试结果为通过该节点访问此网页获得 HTTP 响应所需要的时间），来确认节点的可用性
+# Quantumult 界面中的延迟测试方式均为网页响应性测试，显示的最终延迟均为通过对应节点访问测试网页获得 HTTP 响应所需要时间
+# 由于 Trojan 协议为无响应校验协议，使得 HTTP 检测方式即使获得了 HTTP 响应，也不代表节点一定可用
 
 [general]
 # 网络测试链接
 network_check_url=http://bing.com
 # 服务器测试链接
 server_check_url=http://www.gstatic.com/generate_204
+# 服务器测试超时时间 (毫秒)
+server_check_timeout=3000
 # 如需识别节点地区为中文和显示国旗，请取消下面 geo_location_checker 前的 ; 备注
 ;geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/IP_API.js
 # 指定 WiFi 直连
-## 下方写法表示移动蜂窝网络和一般 WiFi 走分流模式 (filter), 名为 Stick 的 WiFi 下全部直连，名为 Stick-5G 的 WiFi 下全部代理，名为 Stick-8G 的 WiFi 下走分流模式。
+## 下方写法表示移动蜂窝网络和一般 WiFi 为分流模式 (filter), 名为 Stick 的 WiFi 下为全部直连模式，名为 Stick-5G 的 WiFi 下为全部代理模式，名为 Stick-8G 的 WiFi 下为分流模式
 running_mode_trigger=filter, filter, Stick:all_direct, Stick-5G:all_proxy, Stick-8G:filter
 ;excluded_routes= 192.168.0.0/16, 172.16.0.0/12, 127.0.0.0/8, 100.64.0.0/10, 17.0.0.0/8, 10.0.0.0/8
 ;icmp_auto_reply=true
@@ -35,14 +37,12 @@ server=223.5.5.5
 [policy]
 # 其中 CMedia 策略组为中国媒体，GMedia 为国际媒体，Outside 为境外链接，Mainland 为大陆链接，Others 为最终规则
 # 默认注释网易云音乐（包含在 CMedia 内）、Netflix/Disney Plus/Spotify/YouTube（包含在 GMedia 内）、TikTok/Telegram/PayPal（包含在 Outside 内）、微软（包含在 Mainland 内）策略组，如需使用请取消 ; 注释
-# 已更换彩色策略组图标以适配 Quantumult X 新特性
-## 需要手动长按「策略组名称」——点击「背景」——点击右「上角+号」——屏幕中间位置「不透明度调整为 0%」，右上角X关闭此界面，再选择新添加的背景 (在下方) 即可使用透明背景
-static=AdBlock, reject, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Reject.png
+static=AdBlock, reject, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Advertising.png
 static=Outside, Hong Kong, Taiwan, Japan, Korea, United States, Singapore, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
 static=Mainland, direct, Outside, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Domestic.png
 static=Apple, direct, Outside, Hong Kong, United States, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
-static=CMedia, Mainland, Outside, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/DomesticMedia.png
-static=GMedia, Outside, Hong Kong, Taiwan, Japan, Korea, United States, Singapore, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/ForeignMedia.png
+static=CMedia, Mainland, Outside, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/StreamingCN.png
+static=GMedia, Outside, Hong Kong, Taiwan, Japan, Korea, United States, Singapore, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Streaming.png
 ;static=Netflix, GMedia, Singapore, Hong Kong, Taiwan, United States, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netflix.png
 ;static=Disney+, GMedia, Singapore, Hong Kong, Taiwan, United States, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Disney.png
 ;static=Spotify, GMedia, Singapore, Hong Kong, Taiwan, United States, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Spotify.png
